@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 5.2.5
 Date: ????
-  Changes:
+  Bugfixes:
+    - Fixed Unknown sprite error when ModuleInserter mod is missing
 ---------------------------------------------------------------------------------------------------
 Version: 5.2.4
 Date: 2020-10-27
